# s-tool

./: .buildinfo  .flake8  .gitignore  .pre-commit-config.yaml  .pylintrc  CONTRIBUTING.md  HISTORY.rst  LICENSE  Makefile  README.md  README.rst  genindex.html  history.html  index.html  modules.html  objects.inv  pyproject.toml  readme.html  requirements.txt  s_tool.html  search.html  searchindex.js  tox.ini
.github/workflows/: sphinx_gh_pages.yml  test.yml
_sources/: modules.rst.txt
docs/: conf.py  history.rst  index.rst  readme.rst  requirements.txt  s_tool.rst
examples/: with_class_object.py  with_context_manager.py
s_tool/: __init__.py  core.py  driver.py  exceptions.py  logger.py  parser.py  utils.py
s_tool/utils/: __init__.py  driver_exceptions.py  driver_utils.py
stool/: driver.py  parser.py
stool/utils/: __init__.py  driver_exceptions.py  driver_utils.py
tests/: __init__.py  index.html  test_core.py  test_driver.py  test_elements.py  test_parser.py  test_utils.py  test_version.py  test_webdrivers.py
tests/data/: index.html
