[tool.poetry]
name = "s-tool"
version = "0.0.3"
description = "Selenium wrapper to make your life easy."
authors = ["Ravishankar Chavare", "Aahnik Daw <daw@aahnik.dev>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/Python-World/s-tool"
keywords = ["python","selenium","wrapper",'web-driver']
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Natural Language :: English",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Intended Audience :: Education",
  "Intended Audience :: Information Technology",
  "Development Status :: 4 - Beta",
]

[tool.poetry.dependencies]
python = "^3.8"
selenium = "^3.141.0"
webdriver-manager = "^3.4.2"

[tool.poetry.dev-dependencies]
tox = "^3.23.1"
black = "^21.6b0"
isort = "^5.9.1"
pre-commit = "^2.13.0"
pytest = "^6.2.4"
pytest-cov = "^2.12.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"

[tool.black]
line-length = 88
include = '\.pyi?$'
exclude = '''
(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
  | foo.py           # also separately exclude a file named foo.py in
                     # the root of the project
)
'''

[tool.pytest.ini_options]
addopts = "--cov=./s_tool --cov-report=term-missing --cov-report=xml --cov-report=html"
