[tool.poetry]
name = "s-tool"
version = "0.0.4"
description = "Selenium wrapper to make your life easy."
authors = ["Ravishankar Chavare <chavare.ravi123@gmail.com>", "Aahnik Daw <daw@aahnik.dev>"]
packages = [{include = "s_tool"}]

license = "MIT"
readme = "README.rst"
repository = "https://github.com/Python-World/s-tool"
keywords = ["Python","Selenium","wrapper",'Webdriver',"Tools","Utilities"]
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Natural Language :: English",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Intended Audience :: Education",
  "Intended Audience :: Information Technology",
  "Development Status :: 4 - Beta",
]

[tool.poetry.dependencies]
python = "^3.11"
selenium = "^4.9.1"
lxml    = "^4.9.2"
webdriver-manager = "^3.8.5"

[tool.poetry.dev-dependencies]
tox = "^4.5.1"
black = "^23.3.0"
isort = "^5.12.0"
pre-commit = "^2.13.0"
pytest = "^7.3.0"
pytest-cov = "^4.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"

[tool.black]
line-length = 88
include = '\.pyi?$'
exclude = '''
(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
  | foo.py           # also separately exclude a file named foo.py in
                     # the root of the project
)
'''

